--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,13 @@
   "manifest_version": 3,
   "name": "Subtask Navigation for Asana",
   "description": "Navigate the Asana task tree with Shift+Alt+Arrow hotkeys.",
-  "version": "2026.2.28.1306",
+  "version": "2026.2.28.1351",
+  "icons": {
+    "16": "icons/icon-16.png",
+    "32": "icons/icon-32.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
+  },
   "content_scripts": [
     {
       "matches": ["https://app.asana.com/*"],
